<resources>
    <string name="app_name">MES Application</string>

    <string name="hello_world">MES</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dane">DaneActivity</string>
    <string name="title_activity_mes">MesActivity</string>

    <string name="element_lokalny">Opis szablonu dla elementu lokalnego</string>
    <string name="element_globalny">Wykaz elementu globalny</string>

    <string name="wezel_poczatkowy">wykaz wezla danego elementu poczatkowego</string>
    <string name="wezel_koncowy">wykaz wezla danego elementu koncowego</string>

    <string name="wspolzedna_poczatkowa_x">Wspolzedna x wezla poczatkowego</string>
    <string name="wspolzedna_poczatkowa_y">Wspolzedna y wezla poczatkowego</string>
    <string name="wspolzedna_koncowa_x">Wspolzedna x wezla koncowego</string>
    <string name="wspolzedna_koncowa_y">Wspolzedna y wezla koncowego</string>

    <string name="cosinus_elementu_os_x">Funkcja podcalkowa w punktach calkownia</string>
    <string name="cosinus_elementu_os_y">Cosinus elementu na osi Y</string>

    <string name="sila_podluzna">Wykaz sily normalnej</string>
    <string name="sila_moment">Wykaz momentu zginajacego</string>

    <string name="interstitial_ad_sample">Konstrukcja lukowa o stalej sztywnosci EJ</string>
    <string name="start_level">ELEMANT KONSTRUKCJI</string>
    <string name="next_level">Oblicz elemnt konstrukcji</string>



    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="info">Rozpoczecie obliczen statycznych</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>
